make it green now

--- a/.github/workflows/go_vet_fmt_test.yml
+++ b/.github/workflows/go_vet_fmt_test.yml
@@ -21,7 +21,7 @@ jobs:
       run: go vet -v ./...
 
     - name: Fmt
-      run: gofmt -s -l ./...
+      run: gofmt -s -l .
 
     - name: Test
       run: go test -v ./...
