--- a/.github/workflows/go_vet_fmt_test.yml
+++ b/.github/workflows/go_vet_fmt_test.yml
@@ -20,11 +20,13 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
   test:
+    runs-on: ubuntu-latest
     needs: setup
     name: Run Test
     steps:
       - run: go test -v ./...
   race:
+    runs-on: ubuntu-latest
     needs: setup
     name: Run Test with Race flag
     steps:
