--- a/.github/workflows/go_vet_fmt_test.yml
+++ b/.github/workflows/go_vet_fmt_test.yml
@@ -1,27 +1,38 @@
-name: Go Vet Fmt Test
+name: Go Test
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
 
 jobs:
-
-  build:
+  setup: 
+    name: Setup Go
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ['1.16', '1.17']
+
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+    name: Run Test
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: '^1.15.0'
-
-    - name: Vet
-      run: go vet -v ./...
-
-    - name: Fmt
-      run: gofmt -s -l .
-
-    - name: Test
-      run: go test -v ./...
+      - uses: actions/checkout@v2
+      - name: set up go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go }}
+      - run: go test -v ./...
+  race:
+    runs-on: ubuntu-latest
+    needs: setup
+    name: Run Test with Race flag
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go }}
+      - run: go test -v --race ./...
