--- a/.github/workflows/go_vet_fmt_test.yml
+++ b/.github/workflows/go_vet_fmt_test.yml
@@ -7,17 +7,12 @@ on:
   pull_request:
 
 jobs:
-  setup: 
-    name: Setup Go
+  test:
+    name: Run Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
         go: ['1.16', '1.17']
-
-  test:
-    runs-on: ubuntu-latest
-    needs: setup
-    name: Run Test
     steps:
       - uses: actions/checkout@v2
       - name: set up go
@@ -26,9 +21,11 @@ jobs:
           go-version: ${{ matrix.go }}
       - run: go test -v ./...
   race:
+   name: Run Tests with Race Condition
     runs-on: ubuntu-latest
-    needs: setup
-    name: Run Test with Race flag
+    strategy:
+      matrix:
+        go: ['1.16', '1.17']
     steps:
       - uses: actions/checkout@v2
       - name: set up go
